# scale-cpp-taught-wrong

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_all.sh  cmake_one.sh  make_all.sh  make_one.sh  rm_all.sh  rm_one.sh  run_all.sh  run_one.sh
demo/: CMakeLists.txt  demo_init_final.cpp
doc/: slides-SCALE-2023.03.11.odp
include/dl/c/: Malloc.hpp  String.hpp
include/dl/concurrent/: Queue.hpp  WilliamsLockingQueue6.2.hpp
include/dl/ssl/: ScopedInit.hpp  SingleInit.hpp  Unique.hpp
include/dl/util/: Deleter.hpp
include/openssl/: Crypto.hpp
include/sslwrapper/: ScopedInit.hpp  SingleInit.hpp  Unique.hpp
src/: CMakeLists.txt  Crypto.cpp
src/dl/: CMakeLists.txt
src/dl/c/: CMakeLists.txt  Malloc.cpp  String.cpp
src/dl/concurrent/: Queue.cpp
src/dl/ssl/: CMakeLists.txt  ScopedInit.cpp  SingleInit.cpp  Unique.cpp
src/dl/util/: CMakeLists.txt  Deleter.cpp
src/sslwrapper/: CMakeLists.txt  ScopedInit.cpp  SingleInit.cpp  Unique.cpp
test/: CMakeLists.txt  SingleInit_unit.cpp  tests_unit.cpp
